# src/dtos/categories.dto.ts
@@ -1,0 +1,14 @@
+import { IsOptional, IsString } from "class-validator";
+
+export class CreateCategoryDto {
+  @IsString()
+  name: string;
+
+  @IsString()
+  @IsOptional()
+  thumbnail: string;
+
+  @IsString()
+  @IsOptional()
+  status: boolean;
+}
